--- a/assets/scss/layouts/header/_header.scss
+++ b/assets/scss/layouts/header/_header.scss
@@ -383,7 +383,7 @@
 }
 
 .navPages-container-custom {
-    background-color: #ff5100;
+    background-color: stencilColor("header-background-color");
     .navPages {
         @media (min-width: $screen-medium) {
             max-width: 100%;
@@ -417,7 +417,6 @@
                     height: 100%;
                     left: -99%;
                     top: 0;
-                    
                 }
 
                 .header-logo__link {
@@ -566,3 +565,217 @@
     }
 }
 
+/* Header Logo Mobile */
+.mobileSearch-toggle {
+    @media (min-width: 1025px) {
+        display: none;
+    }
+}
+@media (max-width: 1024px) {
+    .header {
+        height: 83px;
+
+        .mobileMenu-toggle {
+            right: 25px;
+            left: unset;
+            top: 50%;
+            transform: translateY(-50%);
+        }
+        &:not(.is-open) {
+        }
+
+        &.is-open {
+            .mobileMenu-toggle {
+                top: 41px;
+            }
+
+            .navPages {
+                background: #000000;
+                padding: 0;
+                padding-top: 55px;
+
+                .custom-header {
+                    padding: 0;
+                }
+
+                .navPages-list:not(.navPages-list--user) {
+                    > .navPages-item {
+                        padding-left: 33px;
+                        padding-right: 33px;
+                        border-bottom: 1px solid #707070;
+
+                        .navPages-action {
+                            padding-top: 20px;
+                            padding-bottom: 20px;
+                        }
+
+                        .navPage-subMenu {
+                            padding-bottom: 20px;
+                            .navPage-subMenu-item {
+                                display: flex;
+                                align-items: center;
+                                flex-wrap: wrap;
+
+                                .navPage-subMenu-image {
+                                    width: 15%
+                                }
+
+                                > .navPage-subMenu-action {
+                                    display: flex;
+                                    width: 85%;
+
+                                    .collapsible-icon-wrapper {
+                                        width: fit-content;
+                                    }
+                                }
+
+                                .navPage-childList {
+                                    width: 100%;
+                                }
+                            }
+                        }
+                    }
+
+                    ~ .btn {
+                        display: none;
+                    }
+                }
+
+                .navPages-action {
+                    color: #ffffff;
+                    font-size: 15px;
+                    letter-spacing: 0;
+                    line-height: 1.53em;
+                    font-weight: 600;
+                }
+
+                .navPages-list--user {
+                    padding-top: 40px;
+                    padding-left: 33px;
+                    padding-right: 33px;
+                    padding-bottom: 200px;
+
+                    .navUser-or {
+                        color: #ffffff;
+                        font-size: 13px;
+                        font-weight: 400;
+                        letter-spacing: 0;
+                        line-height: 1.538em;
+                        text-transform: uppercase;
+                        padding-left: 4px;
+                        padding-right: 4px;
+                        margin-right: 1px;
+                        margin-left: 1px;
+                    } 
+
+                    .navPages-item {
+                        > a {
+                            color: #ffffff;
+                            font-size: 13px;
+                            font-weight: 400;
+                            letter-spacing: 0;
+                            line-height: 1.538em;
+                            text-transform: uppercase;
+                            text-decoration: none;
+                        }
+
+                        + .navPages-item {
+                            margin-top: 16px;
+                        }
+
+                        .header-top__icon {
+                            margin-right: 12px;
+                        }
+
+                        &.navPages-item--account {
+                            a {
+                                padding: 0;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
+        .navPages-container.is-open {
+            padding-top: 83px;
+        }
+
+        .mobileSearch-toggle {
+            position: absolute;
+            top: 0;
+            right: 73px;
+            display: inline-flex;
+            align-items: center;
+            height: 100%;
+            max-height: 83px;
+            z-index: 9;
+            
+            img {
+                max-height: 28px;
+                max-width: 28px;
+            }
+        }
+
+        .mobileMenu-toggle {
+            width: 19px;
+            height: 13px;
+            padding: 0;
+        }
+
+        /* Search Mobile */
+        .custom-search-mobile {
+            .navPages-quickSearch {
+                position: absolute;
+                bottom: -75px;
+                left: 0;
+                right: 0;
+                z-index: 1;
+                display: none;
+            }
+
+            &.is-open {
+                .navPages-quickSearch {
+                    display: block;
+                }
+            }
+        }
+    }
+    .header-logo--mobile {
+        background-color: stencilColor("header-background-color");
+        margin-left: 0;
+        margin-right: 0;
+        height: 100%;
+        max-height: 83px;
+
+        .header-logo__link {
+            margin: 0;
+            width: fit-content;
+            background: #232323;
+            padding-left: 30px;
+            padding-right: 122px;
+            transform: skew(-45deg);
+
+            @media (max-width: 500px) {
+                padding-right: 70px;
+            }
+
+            &::after {
+                content: "";
+                background-color: inherit;
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                left: -99%;
+                top: 0;
+            }
+            
+        }
+
+        .header-logo-image {
+            margin: 0;
+            max-height: 41px;
+            transform: skew(45deg);
+        }
+    }
+}
