--- a/templates/components/common/footer.html
+++ b/templates/components/common/footer.html
@@ -32,14 +32,16 @@
             </article>
 
             <article class="footer-info-col footer-info-col--small" data-section-type="footer-brands">
-                <h3 class="footer-info-heading">{{lang 'footer.brands'}}</h3>
+                <h3 class="footer-info-heading">Customer Service</h3>
                 <ul class="footer-info-list">
-                    {{#each shop_by_brand}}
-                        <li>
-                            <a href="{{url}}">{{name}}</a>
-                        </li>
-                    {{/each}}
-                    <li><a href="{{urls.brands}}">{{lang 'common.view_all'}}</a></li>
+                    <li>
+                        <a href="#">MyTYGRIS</a>
+                        <a href="#">Sample Request</a>
+                        <a href="#">Order Tracking & Returns</a>
+                        <a href="#">Shipping & Returns Policy</a>
+                        <a href="#">Terms & Conditions</a>
+                        <a href="#">Privacy Policy</a>
+                    </li>
                 </ul>
             </article>
 
