--- a/templates/components/common/navigation-list.html
+++ b/templates/components/common/navigation-list.html
@@ -6,9 +6,9 @@
     data-sr-origin="top"
 >
     {{name}}
-    <i class="icon navPages-action-moreIcon" aria-hidden="true">
-        <svg><use href="#icon-chevron-down" /></svg>
-    </i>
+   <i class="iconMore-action-menu">
+        <span class="custom-plus-icon"></span>
+   </i>
 </a>
 <div class="navPage-subMenu" id="navPages-{{id}}" aria-hidden="true" tabindex="-1">
     <ul class="navPage-subMenu-list">
@@ -41,8 +41,8 @@
                             data-collapsible-disabled-state="open"
                             data-collapsible-enabled-state="closed"
                         >
-                            <i class="icon navPages-action-moreIcon" aria-hidden="true">
-                                <svg><use href="#icon-chevron-down" /></svg>
+                            <i class="iconMore-action-menu">
+                                <span class="custom-plus-icon"></span>
                             </i>
                         </span>
                     </a>
