--- a/templates/components/common/navigation-menu.html
+++ b/templates/components/common/navigation-menu.html
@@ -1,4 +1,8 @@
 <nav class="navPages">
+    <!-- Close Menu Sidebar -->
+    <a href="#" class="custom-close-menuSidebar hide-on-desktop">
+        <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/close-menu-sidebar.png" alt="Close Menu Side Bar">
+    </a>
     <div class="container container-1920 custom-header">
         <!-- Logo -->
         {{#if page_type '===' 'default'}}
