--- a/assets/scss/settings/layouts/footer/_settings.scss
+++ b/assets/scss/settings/layouts/footer/_settings.scss
@@ -4,3 +4,5 @@
 
 $footer-background:                             stencilColor("footer-backgroundColor");
 $footer-heading-fontColor:                      stencilColor("footer-heading-fontColor");
+$footer-text-color:                             stencilColor("footer-text-color");
+$footer-text-colorHover:                        stencilColor("footer-text-colorHover");
