--- a/templates/components/common/social-links.html
+++ b/templates/components/common/social-links.html
@@ -1,7 +1,7 @@
 {{#if social_media}}
     <ul class="socialLinks socialLinks--alt">
         {{#each social_media}}
-            <li class="socialLinks-item">
+            <li class="custom-socialLinks-item shield">
                 <a class="icon icon--{{display_name}}"
                    href="{{url}}"
                    target="_blank"
